--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /**
- * @author Prenom Nom <courriel>
+ * @author Michel Kingma-Lord <0801342@csfoy.ca>
  *
  * TABLE DES MATIERES
  * Normalize
